--- a/wiki/Timing.wiki
+++ b/wiki/Timing.wiki
@@ -1,6 +1,6 @@
 #summary How we measure time in Divvy
 
-= Apple Documentation Links =
+=== Apple Documentation Links ===
 
 [http://developer.apple.com/library/mac/#qa/qa2004/qa1398.html Reference info] -- mainly listing 2 is what we want, I think
 
