--- a/wiki/DeviceInfo.wiki
+++ b/wiki/DeviceInfo.wiki
@@ -2,4 +2,6 @@
 
 === Documentation Links ===
 
+[http://www.khronos.org/registry/cl/sdk/1.0/docs/man/xhtml/clGetDeviceInfo.html Reference for clGetDeviceInfo]
+
 [http://developer.apple.com/library/mac/#documentation/Performance/Conceptual/OpenCL_MacProgGuide/TheOpenCLWorkflow/TheOpenCLWorkflow.html Section on querying available compute devices]
