Edited wiki page ProgrammingResources through web user interface.

--- a/wiki/ProgrammingResources.wiki
+++ b/wiki/ProgrammingResources.wiki
@@ -1,6 +1,6 @@
 #summary Programming best practices
 
-=== C Reference ===
+=== C / ObjC Reference ===
 
 [http://proquest.safaribooksonline.com/1-56592-306-5/ Practical C Programming]
 
