--- a/wiki/PluginDevelopment.wiki
+++ b/wiki/PluginDevelopment.wiki
@@ -1,6 +1,8 @@
 #summary Things to remember when developing a Divvy plugin.
 
 The prefix header for the plugin needs to be set to Divvy_Prefix.pch.
+C source files need extension .c (.cpp might not work).
+When creating new classes and C source files, make sure they don't get added to the Divvy application target.
 
 = Required resources =
   * The main plugin class DivvyYourPluginName (e.g. DivvyPCA), it must conform to one and only one of the plugin protocols
