--- a/wiki/Notes.wiki
+++ b/wiki/Notes.wiki
@@ -15,3 +15,5 @@ clGetDeviceInfo often returns incorrect CPU and GPU details, such as CPU count &
 = Xcode =
 
 C source in a separate bundle/plugin target blows up by default. For now we're including Divvy_Prefix.pch in the DivvyPlugin framework and using that as the precompiled header for all bundles. Alternatively one can mark the c file as objc as described in [http://lists.apple.com/archives/xcode-users/2009/Mar/msg00199.html this thread].
+
+Xcode 4 apparently has a bug where every time you click on a data model it modifies it (becomes unsaved and once saved wants to be recommitted to SVN).
